[build-system]
requires = ["setuptools>=75.0.0", "wheel", "setuptools_scm[toml]>=5.0"]

[tool.mypy]
exclude = "build/"

[tool.setuptools_scm]
write_to = "ape_titanoboa/version.py"

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.ape]
contracts_folder = "tests/contracts"

[tool.ape.titanoboa]
fast_mode = true

[tool.ape.titanoboa.fork.ethereum.sepolia]
upstream_provider = "alchemy"
block_identifier = 7341111

[tool.ape.titanoboa.fork.ethereum.holesky]
upstream_provider = "alchemy"
block_identifier = 3071111

[tool.ape.titanoboa.fork.ethereum.mainnet]
upstream_provider = "alchemy"
block_identifier = 21551111

[tool.ape.ethereum.local]
default_provider = "boa"

[tool.ape.ethereum.mainnet_fork]
default_provider = "boa"

[tool.ape.ethereum.sepolia_fork]
default_provider = "boa"

[tool.ape.test]
show_internal = true

[tool.pytest.ini_options]
addopts = """
    -p no:pytest_ethereum
    -p no:boa_test
"""
python_files = "test_*.py"
testpaths = "tests"
markers = "fuzzing: Run Hypothesis fuzz test suite"

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
